--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 	// ------------------------
 
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8' // 로그에서 쿼리 파라미터 보기
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
